# mapterhorn

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  USGS_QUICKSTART.md
.github/workflows/: lint.yml
data-access/: index.html
distribution/: mirrors.json
docs/: USGS_DATA_INTEGRATION.md
examples/contour/: example.html
examples/hillshade/: example.html
examples/migration/: example.html
examples/pmtiles/: example.html
examples/terrain/: example.html  index.html
pipelines/: .gitignore  .pipeline_state.db  INCREMENTAL_PIPELINE_PLAN.md  Justfile  Justfile.pmtiles  README.md  TESTING.md  aggregation_covering.py  aggregation_merge.py  aggregation_reproject.py  aggregation_run.py  aggregation_tile.py  attribution.py  benchmark_gpu.py  bundle.py  clean_pipeline.py  compare.html  compare3.html  compare_pmtiles.py  create_index.py  create_tile_index.py  download_from_hf.py  download_urls.py  downsampling_covering.py  downsampling_run.py  eta.py  generate_previews.py  gpu_utils.py  index.html  local3.html  mirror.py  mirrorstatus.py  pipeline-report-au5-20260108_165342.html  pipeline_reporter.py  pipeline_state.py  pmtiles_create_tarball.py  pmtiles_upload.py  process_and_upload.py  process_sources.py  pyproject.toml  (+23 more)
source-catalog/: README.md
source-catalog/aalv/: Justfile  file_list.txt  metadata.json
source-catalog/at1/: Justfile  file_list.txt  metadata.json
source-catalog/at10/: Justfile
source-catalog/atburgenland/: Justfile
source-catalog/atkaernten/: Justfile
viewer/: index.html
website/: index.html
(+332 files in other folders)
