[project]
name = "pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "imagecodecs>=2023.3.16",
    "mercantile>=1.2.1",
    "numpy>=1.24.4",
    "pillow>=10.4.0",
    "pmtiles>=3.4.1",
    "python-ulid>=1.1.0",
    "rasterio>=1.3.11",
    "requests>=2.32.4",
    "scipy>=1.10.1",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x>=13.0.0",  # GPU acceleration via CuPy (CUDA 12.x compatible)
]
