[project]
name = "pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "huggingface-hub>=0.36.0",
    "imagecodecs>=2023.3.16",
    "mercantile>=1.2.1",
    "numpy>=1.24.4",
    "pillow>=10.4.0",
    "pmtiles>=3.4.1",
    "python-ulid>=1.1.0",
    "rasterio>=1.3.11",
    "requests>=2.32.4",
    "scipy>=1.10.1",
]
